force-app/main/default/objects/Block__c/Block__c.object-meta.xml
<CustomObject>
    <label>Block</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blocks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>