force-app/main/default/objects/Block__c/fields/Hacked__c.field-meta.xml
<CustomField>
    <fullName>Hacked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hacked</label>
    <type>Checkbox</type>
</CustomField>