force-app/main/default/objects/Block__c/fields/Nonce__c.field-meta.xml
<CustomField>
    <fullName>Nonce__c</fullName>
    <label>Nonce</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>