force-app/main/default/objects/Block__c/fields/Previous_Hash__c.field-meta.xml
<CustomField>
    <fullName>Previous_Hash__c</fullName>
    <label>Previous Hash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>