force-app/main/default/objects/Block__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not yet validated</fullName>
                <default>true</default>
                <label>Not yet validated</label>
            </value>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Invalid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>