force-app/main/default/objects/Block__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Blockchain__c</columns>
    <columns>Timestamp__c</columns>
    <columns>Number_of_Transactions__c</columns>
    <columns>Previous_Hash__c</columns>
    <columns>Hash__c</columns>
    <columns>Nonce__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>